# intervalframe

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.eggs/tabulate-0.8.7-py3.8.egg/EGG-INFO/: RECORD
doc/: conf.py  release-notes.rst  tutorial.rst
doc/_build/doctrees/: README.doctree  (+5 more)
doc/api/: intervalframe.IntervalFrame.annotate.rst  intervalframe.IntervalFrame.combine.rst  intervalframe.IntervalFrame.concat.rst  intervalframe.IntervalFrame.difference.rst  intervalframe.IntervalFrame.downsample.rst  intervalframe.IntervalFrame.drop_columns.rst  intervalframe.IntervalFrame.ends.rst  intervalframe.IntervalFrame.exact_match.rst  intervalframe.IntervalFrame.from_dict_range.rst  intervalframe.IntervalFrame.intersect.rst  intervalframe.IntervalFrame.iter_intersect.rst  intervalframe.IntervalFrame.length_dist.rst  intervalframe.IntervalFrame.merge.rst  intervalframe.IntervalFrame.nhits_from_array.rst  intervalframe.IntervalFrame.read_bed.rst  intervalframe.IntervalFrame.read_h5.rst  intervalframe.IntervalFrame.read_parquet.rst  intervalframe.IntervalFrame.segment.rst  intervalframe.IntervalFrame.shape.rst  intervalframe.IntervalFrame.sparse_optimize.rst  intervalframe.IntervalFrame.subtract.rst  intervalframe.IntervalFrame.to_h5.rst  intervalframe.IntervalFrame.to_parquet.rst  intervalframe.IntervalSeries.bin_coverage.rst  intervalframe.IntervalSeries.copy.rst  intervalframe.IntervalSeries.coverage.rst  intervalframe.IntervalSeries.downsample.rst  intervalframe.IntervalSeries.from_array.rst  intervalframe.IntervalSeries.intersect.rst  intervalframe.IntervalSeries.length_dist.rst  intervalframe.IntervalSeries.nhits.rst  intervalframe.IntervalSeries.rst  intervalframe.IntervalSeries.segment.rst  intervalframe.IntervalSeries.subtract.rst  intervalframe.IntervalSeries.wps.rst
intervalframe/: __init__.py
intervalframe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
intervalframe/core/: IntervalFrame.py  IntervalSeries.py  groupby.py
intervalframe/read/: read_h5.py  read_parquet.py  read_text.py
intervalframe/write/: write_h5.py  write_parquet.py  write_text.py
test/: benchmark.py  mem.py  test.py
(+450 files in other folders)
